--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,5 @@
-numpy
-scipy
-tensorflow>=2.3.0
-jax
-numba
-spectrum
-seaborn
-matplotlib
-ipympl
-cartopy
-osmnx
-h5py
-notebook
+numpy==1.23.0
+scipy==1.8.1
+matplotlib==3.5.2
+h5py==3.7.0
+tensorflow==2.9.1
